<resources>
    <string name="app_name">PDFSign</string>

    <string name="app_tsa_url">https://tsa.rootca.or.id</string>

    <string name="sign">Tandatangni</string>
    <string name="text_sign">Tandatangani</string>
    <string name="text_wait">Tolong tunggu</string>
    <string name="close">Tutup</string>
    <string name="text_document_saved_in">Dokumen disimpan di: </string>
    <string name="text_share">Bagikan</string>
    <string name="text_tsa_empty">Url Tsa masih kosong</string>
    <string name="text_cancel">Batal</string>
    <string name="text_apply">Terapkan</string>
    <string name="text_custom_tsa">Kustom Tsa</string>
    <string name="text_default_tsa">Gunakan default Tsa</string>
    <string name="text_certificate_invalid">Sertifikat yang dipilih tidak valid</string>
    <string name="text_certificate">Sertifikat</string>
    <string name="text_close">Tutup</string>
    <string name="text_tsa_connection_failed">Gagal terhubung dengan server timestamp.\n\nPilihan : \n1. Merubah alamat server timestamp.\n2. Menandatangani tanpa menggunakan timestamp.</string>

    <string name="text_verify_pdf_file">Verifikasi dokumen PDF anda</string>
    <string name="btn_browse_pdf">Pilih PDF</string>
    <string name="text_dont_have_signature">Dokumen ini tidak memiliki tanda tangan digital</string>
    <string name="back">Kembali</string>
    <string name="text_document_information">Informasi Dokumen</string>
    <string name="text_signature">Tandatangan</string>
    <string name="text_sign_by">Ditandatangani Oleh</string>
    <string name="text_location">Lokasi</string>
    <string name="text_reason">Alasan</string>
    <string name="text_sign_on">Ditandatangani pada</string>
    <string name="text_timestamp">Timestamp</string>
    <string name="text_certficate">Sertifikat</string>
    <string name="text_serial">Serial</string>
    <string name="text_validity">Validitas</string>
    <string name="text_subject">Subject</string>
    <string name="text_issuer">Issuer</string>
    <string name="text_public_key">Public Key</string>
    <string name="text_algoritma_ttd">Algoritma TTD</string>
    <string name="text_sha_1_fingerprint">SHA-1 Fingerprint</string>
    <string name="text_document_not_valid">Dokemen tidak sesuai</string>
    <string name="text_valid">Valid</string>
    <string name="text_not_valid">Tidak Valid</string>
    <string name="text_certificate_not_verified">Sertifikat dicabut</string>
    <string name="text_certificate_verified">Sertifikat terverifikasi</string>
    <string name="text_certificate_not_trusted">Sertifikat tidak terpercaya</string>
    <string name="text_certificate_trusted">Sertifikat terpercaya</string>
    <string name="text_failed_open_pdf">Dokumen pdf tidak bisa dibuka</string>
    <string name="text_no_internet">Perangkat tidak terhubung dengan internet</string>
</resources>
