<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <CheckBox
        android:id="@+id/check_tsa_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_default_tsa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tsa_url" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_custom_tsa" />

    <EditText
        android:id="@+id/edit_tsa_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_edittext"
        android:hint="@string/app_tsa_url" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/close" />

        <Button
            android:id="@+id/btn_apply"
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:text="@string/text_apply" />
    </LinearLayout>

</LinearLayout>