<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="2dp"
        android:background="@drawable/background_stroke"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blueGreyLight"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:text="@string/text_certficate"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/validity_certificate_trusted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_check_24dp"
                        android:tint="@color/colorGreen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/text_certificate_trusted" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/validity_certificate_not_trusted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_cross_24dp"
                        android:tint="@color/colorRed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/text_certificate_not_trusted" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/validity_certificate_verified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_check_24dp"
                        android:tint="@color/colorGreen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/text_certificate_verified" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/validity_certificate_not_verified"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_cross_24dp"
                        android:tint="@color/colorRed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/text_certificate_not_verified" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/validity_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_check_24dp"
                        android:tint="@color/colorGreen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/text_valid" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/validity_not_valid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_cross_24dp"
                        android:tint="@color/colorRed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:text="@string/text_not_valid" />

                </LinearLayout>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_serial" />

            <TextView
                android:id="@+id/text_serial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorGrey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_validity" />

            <TextView
                android:id="@+id/text_validity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorGrey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_subject" />

            <TextView
                android:id="@+id/text_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorGrey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_issuer" />

            <TextView
                android:id="@+id/text_issuer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorGrey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_public_key" />

            <TextView
                android:id="@+id/text_public_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorGrey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_algoritma_ttd" />

            <TextView
                android:id="@+id/text_algorithm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:textStyle="bold" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorGrey" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_sha_1_fingerprint" />

            <TextView
                android:id="@+id/text_sha1_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="---"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>