<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_signature"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_sign_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:text="status"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_sign_by" />

                <TextView
                    android:id="@+id/text_sign_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="---"
                    android:textStyle="bold" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorGrey" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_location" />

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="---"
                    android:textStyle="bold" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorGrey" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_reason" />

                <TextView
                    android:id="@+id/text_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="---"
                    android:textStyle="bold" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorGrey" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_sign_on" />

                <TextView
                    android:id="@+id/text_localSignDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="---"
                    android:textStyle="bold" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorGrey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/text_timestamp" />

                <TextView
                    android:id="@+id/text_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="---"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/certificates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>